# rust-cognito-starter-kit

./: .gitignore  Cargo.toml  LICENSE  README.md  environment.json  package-lock.json  package.json
infra/lib/: main-stack.ts
infra/lib/cognito/: cognito-construct.ts
infra/lib/data/: table-construct.ts
infra/lib/functions/: token-authorizer-construct.ts  token-customizer-construct.ts
token-authorizer/: Cargo.toml
token-authorizer/src/: claims.rs  main.rs
token-authorizer/test_events/: good_token.json
token-customizer/: Cargo.toml
token-customizer/src/: aws_events.rs  data.rs  main.rs  models.rs
token-customizer/test_events/: e-1.json
